<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_any_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOption"
        android:baselineAligned="false"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_3sdp">

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_3sdp">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_thumb"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCameraFullImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_1sdp">

            <ImageView
                android:id="@+id/ivCameraFullImage"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera_full" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_full"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>